[gd_scene load_steps=9 format=3 uid="uid://ch58e3gs2cydi"]

[ext_resource type="Theme" uid="uid://di6c6eibepkft" path="res://resources/game_theme.tres" id="1_86rft"]
[ext_resource type="Script" uid="uid://ciy3po4qfeccv" path="res://scenes/gui/toolbox_controller.gd" id="2_v2glx"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_tu0hn"]
load_path = "res://.godot/imported/tools_sprite.png-043a8f09c3686f78458e23daf833bbce.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_v2glx"]
atlas = SubResource("CompressedTexture2D_tu0hn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_rrtyt"]
load_path = "res://.godot/imported/tools_sprite.png-043a8f09c3686f78458e23daf833bbce.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_ko715"]
atlas = SubResource("CompressedTexture2D_rrtyt")
region = Rect2(16, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_v2glx"]
load_path = "res://.godot/imported/tools_sprite.png-043a8f09c3686f78458e23daf833bbce.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_rrtyt"]
atlas = SubResource("CompressedTexture2D_v2glx")
region = Rect2(32, 0, 16, 16)

[node name="Toolbox" type="PanelContainer"]
offset_right = 76.0
offset_bottom = 48.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("1_86rft")
theme_type_variation = &"ThemedPanel"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TillHoe" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_v2glx")

[node name="WateringCan" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_ko715")

[node name="HarvestSack" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_rrtyt")

[node name="ToolboxController" type="Node" parent="." node_paths=PackedStringArray("till_hoe", "watering_can", "harvest_sack")]
script = ExtResource("2_v2glx")
till_hoe = NodePath("../MarginContainer/HBoxContainer/TillHoe")
watering_can = NodePath("../MarginContainer/HBoxContainer/WateringCan")
harvest_sack = NodePath("../MarginContainer/HBoxContainer/HarvestSack")

[connection signal="ready" from="ToolboxController" to="ToolboxController" method="_on_ready"]
